Added: ClassLibary and implemented Interface per store for data aggregation. TODO Inet scraper Throws exception when price has Campaign-price class

--- a/Scraper/Scraper.csproj
+++ b/Scraper/Scraper.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.30.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Scraper.lib\Scraper.lib.csproj" />
+  </ItemGroup>
+
 </Project>
