--- a/Scraper.lib/Scraper.lib.csproj
+++ b/Scraper.lib/Scraper.lib.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.14.0-beta1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
   </ItemGroup>
 
