--- a/Scraper.lib/Scraper.lib.csproj
+++ b/Scraper.lib/Scraper.lib.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Aggregation" />
+  </ItemGroup>
+
 </Project>
