--- a/Scraper.Api/Scraper.Api.csproj
+++ b/Scraper.Api/Scraper.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Scraper.lib\Scraper.lib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services" />
+  </ItemGroup>
+
 </Project>
